# astrotrails

./: .gitignore  Astrotrails.py  BUILDING.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
astrotrails/: __init__.py  __main__.py  _version.py  astrogui.py  cli.py  command_line.py  core.py  gui.py  video.py
documentation/: demo.webm
packaging/appimage/: build-appimage.sh
packaging/debian/: astrotrails.desktop  build-deb.sh
packaging/docker/: Dockerfile
packaging/windows/: astrotrails.iss  astrotrails.spec
tests/: conftest.py  test_cli.py  test_core.py  test_video.py
